fix: imporved how the asside looks on small screens

--- a/src/components/MovieList.css
+++ b/src/components/MovieList.css
@@ -29,5 +29,13 @@
     .sideBar {
         margin: 0px !important;
         min-width: unset !important;
+        width: unset !important;
     }
+    .sideBar.preload {
+        display: none !important;
+    }
+    .sideBarButton {
+        left: 15px !important;
+    }
+
 }
