--- a/src/components/bodyParts/SideBar.css
+++ b/src/components/bodyParts/SideBar.css
@@ -9,7 +9,7 @@
     overflow:hidden;
 }
 
-.preload {
+.preload.sideBar {
     min-width:0px;
 }
 
